# core

./: .gitignore  Cargo.toml  Makefile  README.md  package.json  pnpm-lock.yaml  shell.nix
.github/workflows/: release.yaml  test.yaml
src/: cache.rs  error.rs  lib.rs  parse.rs  runtime.rs  tree.rs  utils.rs
src/client/: address.rs  attachment.rs  builder.rs  connection.rs  content.rs  keep_alive.rs  mod.rs  protocol.rs
src/client/incoming/: mod.rs
src/client/incoming/imap/: keep_alive.rs  mod.rs  oauth.rs  parse.rs  query.rs  utils.rs
src/client/incoming/maildir/: mod.rs
src/client/incoming/pop/: constants.rs  mod.rs  parse.rs
src/client/incoming/types/: flag.rs  mailbox.rs  message.rs  mod.rs
src/client/maildir/: mod.rs
src/client/outgoing/: mod.rs
src/client/outgoing/smtp/: mod.rs  parse.rs
src/client/outgoing/types/: message.rs  mod.rs
src/client/parser/: address.rs  message.rs  mod.rs
src/detect/: mod.rs  service.rs
src/discover/: client.rs  config.rs  error.rs  mod.rs  parse.rs
src/parse/: body.rs  mod.rs
src/session/: login.rs
src/tcp/: mod.rs
src/types/: client.rs  error.rs  mailbox.rs  message.rs  mod.rs
src/types/incoming/: flags.rs  mailbox.rs  message.rs  mod.rs
src/types/outgoing/: message.rs
src/types/parser/: address.rs  message.rs
