[package]
name = "dust-mail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Imap
async-imap = {version = "0.6.0", default-features = false, features = ["runtime-tokio"], optional = true }

# Pop
async-pop = {version = "0.1", optional = true }

# Smtp
lettre = { version = "0.10", optional = true }

# Autodetect service
autoconfig = { version = "0.2", optional = true }

# Generic mail utilities
mailparse = "0.14"

# Serde
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = "0.4"

# Tls
async-native-tls = {version = "0.4.0", default-features = false, features = ["runtime-tokio"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.66"
futures = "0.3"

# Sanitizing text
ammonia = "3"
regex = "1.7.3"

[dev-dependencies]
dotenv = "0.15.0"

[features]
default = ["imap", "pop", "detect", "smtp"]

detect = ["autoconfig"]
autoconfig = ["dep:autoconfig"]

smtp = ["dep:lettre"]

pop = ["dep:async-pop"]
imap = ["dep:async-imap"] 
