[package]
name = "dust-mail"
version = "0.2.1"
edition = "2021"

rust-version = "1.67"

repository = "https://github.com/dust-mail/core"
documentation = "https://docs.dust.email"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Imap
async-imap = { version = "0.8.0", default-features = false, features = [
	"runtime-tokio",
], optional = true }

# Pop
async-pop = { version = "0.1.7", optional = true }

async-smtp = { version = "0.9.0", optional = true }

# Autodetect service
autoconfig = { version = "0.3", optional = true }
ms-autodiscover = { version = "0.3", optional = true }
dns-mail-discover = { version = "0.2", optional = true }

# Generic mail utilities
mailparse = "0.14"
email = "0.0.21"

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = "0.4"

# Tls
async-native-tls = { version = "0.4.0", default-features = false, features = [
	"runtime-tokio",
] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.66"
futures = "0.3"

# Sanitizing text
ammonia = "3"

# Logging
log = "0.4"
validator = "0.16.1"

[dev-dependencies]
env_logger = "0.10.0"
dotenv = "0.15.0"

[features]
default = ["imap", "pop", "discover", "smtp"]

discover = ["autoconfig", "autodiscover", "dep:dns-mail-discover"]
autoconfig = ["dep:autoconfig"]
autodiscover = ["dep:ms-autodiscover"]

smtp = ["dep:async-smtp"]

pop = ["dep:async-pop"]
imap = ["dep:async-imap"]
