[package]
name = "dust-mail"
version = "0.4.1"
edition = "2021"

rust-version = "1.67"

repository = "https://github.com/dust-mail/core"
documentation = "https://docs.dust.email"

license = "MIT"
description = "A multi protocol email client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Imap
async-imap = { version = "0.8.0", default-features = false, optional = true }

# Pop
async-pop = { version = "1.0.1", default-features = false, optional = true }

async-smtp = { version = "0.9.0", default-features = false, optional = true }

# Autodetect service
autoconfig = { version = "0.4", default-features = false, optional = true }
ms-autodiscover = { version = "0.3", default-features = false, features = ["pox"], optional = true }
dns-mail-discover = { version = "0.2.7", default-features = false, optional = true }

# Generic mail utilities
mailparse = "0.14"
email = "0.0.21"
mail-builder = "0.3.0"
maildir = { version = "0.6.4", optional = true }

# Serde
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = {version = "1.0", optional = true }

# Time
chrono = "0.4"

# Tls
async-native-tls = { version = "0.5.0", default-features = false }

# Async
tokio = { version = "1", features = ["net", "macros", "sync", "time", "rt-multi-thread"], optional = true }
async-std = {version = "1.12.0", features = ["attributes"], optional = true }
async-trait = "0.1.66"
futures = "0.3"

# Sanitizing text
ammonia = "3"

# Logging
log = "0.4"

validator = "0.16.1"
directories = "5.0.1"

[dev-dependencies]
env_logger = "0.10.0"
dotenv = "0.15.0"

[features]
default = ["pop", "imap", "smtp", "discover", "runtime-tokio", "serde", "maildir"]

maildir = ["dep:maildir"]

discover = ["autoconfig", "autodiscover", "dep:dns-mail-discover"]
autoconfig = ["dep:autoconfig"]
autodiscover = ["dep:ms-autodiscover"]

smtp = ["dep:async-smtp"]

pop = ["dep:async-pop"]
imap = ["dep:async-imap"]

serde = ["dep:serde"]
json = ["serde", "dep:serde_json"]

runtime-tokio = ["dep:tokio", "async-native-tls/runtime-tokio", "async-imap?/runtime-tokio", "async-smtp?/runtime-tokio", "async-pop?/runtime-tokio", "autoconfig?/runtime-tokio", "ms-autodiscover?/runtime-tokio", "dns-mail-discover?/runtime-tokio"]
runtime-async-std = ["dep:async-std", "async-native-tls/runtime-async-std", "async-imap?/runtime-async-std", "async-smtp?/runtime-async-std", "async-pop?/runtime-async-std", "autoconfig?/runtime-async-std", "ms-autodiscover?/runtime-async-std", "dns-mail-discover?/runtime-async-std"]
